--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
     </div>
 
     <div class="number-bar">
-      <p>Number Drawn:</p>
       <p id="current-number"></p>
-      <button id="next-turn">Next Turn</button>
       <button id="reset-game">Restart Game</button>
     </div>
 
     <p id="turn-info">Player 1's turn</p>
+    <p id="winner-info" style="color: green; font-weight: bold;"></p> <!-- Added for winner message -->
   </div>
 
   <script src="script.js"></script>
