--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Bingo Game</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
 </head>
 <body>
@@ -66,6 +66,7 @@
     <p id="turn-info" class="turn-info"></p>
     <p id="winner-info" class="winner-info"></p>
   </div>
-  <script src="script.js"></script>
+ <script src="/socket.io/socket.io.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
